tests/paczka1/fuzzy1/96273101.err
Error in line 2: yvyGEwu S799 18,9
Error in line 11: yvyGEwu S730 58,9
Error in line 22: yvyGEwu S799 86,2
Error in line 24: yvyGEwu S546 70,8
Error in line 21: erKbABgr S546 52,4
Error in line 30: S730 S546 61,7
